--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 ROBOTEVENTS_API_KEY="Bearer {access key}" # eg. ROBOTEVENTS_API_KEY = "Bearer kdsjfhiekurighckjgigukhaslkjdgfiugfksdjv"
 CGPT_API_KEY = "{access key}" # eg. CGPT_API_KEY = "fdsoakufh893q47yt89hf8o7yt83ubv8o7t"
 BOT_KEY = "{bot token}" # eg. BOT_KEY = "w8eur923487yr9837fg8o37tg"
+SEASON = 181 # current season ID
